[gd_scene load_steps=25 format=4 uid="uid://ox8uscgnfs8d"]

[ext_resource type="Script" path="res://Stages/EndArea/end_area.gd" id="1_3au4c"]
[ext_resource type="TileSet" uid="uid://dmmie87461ik" path="res://Stages/Tilesets/BasicGroundTileset/ground_tileset.tres" id="1_605ti"]
[ext_resource type="PackedScene" uid="uid://drh4ogecomr7e" path="res://Entities/MovablePlatform/movable_platform.tscn" id="3_3rhgk"]
[ext_resource type="TileSet" uid="uid://rd0tyvgpk6dl" path="res://Stages/Tilesets/BasicGroundTileset/hidden_ground_tileset.tres" id="3_fpu8u"]
[ext_resource type="PackedScene" uid="uid://cjmpc6pv5y455" path="res://Entities/Player/player.tscn" id="3_j2xt5"]
[ext_resource type="Texture2D" uid="uid://csk70qfk4ikb2" path="res://Stages/StartArea/background_grid.png" id="3_oajhm"]
[ext_resource type="PackedScene" uid="uid://cmkmys2dxu7xa" path="res://Entities/Hermit/Ghost/hermitGhost.tscn" id="5_0pdnl"]
[ext_resource type="Texture2D" uid="uid://bjmgpah4cc02k" path="res://Stages/EndArea/BG_Ending.png" id="5_rkvis"]
[ext_resource type="AudioStream" uid="uid://bwcityv54m88l" path="res://Assets/Audio/SFX/Transitions/Whoosh.mp3" id="6_bjgy4"]
[ext_resource type="Script" path="res://Stages/EndArea/ghost_appear_zone.gd" id="6_bvedl"]
[ext_resource type="Script" path="res://Entities/PitchedAudioStreamPlayer/pitched_audio_stream_player.gd" id="7_shkq6"]
[ext_resource type="PackedScene" uid="uid://vqpl81cyrocu" path="res://Entities/Pushable/ExitFlag/exit_flag.tscn" id="10_hwype"]
[ext_resource type="Texture2D" uid="uid://c7d1m1qqspi26" path="res://Stages/StartArea/Lights/StartLeftTop.png" id="13_hhf3b"]
[ext_resource type="PackedScene" uid="uid://bv67h1xb2oixd" path="res://Entities/InteractionZone/ExitDoor/exit_door.tscn" id="13_wp323"]
[ext_resource type="PackedScene" uid="uid://d2gdk8od3nlqq" path="res://Stages/Credits/credits.tscn" id="14_1iyhe"]

[sub_resource type="Curve2D" id="Curve2D_wkf5w"]
_data = {
"points": PackedVector2Array(0, 0, 0, 0, 232, 160, 0, 0, 0, 0, 232, 104)
}
point_count = 2

[sub_resource type="Curve2D" id="Curve2D_txa4d"]
_data = {
"points": PackedVector2Array(0, 0, 0, 0, 232, 80, 0, 0, 0, 0, 384, 80)
}
point_count = 2

[sub_resource type="Curve2D" id="Curve2D_n2u1i"]
_data = {
"points": PackedVector2Array(0, 0, 0, 0, 168, 112, 0, 0, 0, 0, 96, 112, 0, 0, 0, 0, 96, 200)
}
point_count = 3

[sub_resource type="Curve2D" id="Curve2D_57lwx"]
_data = {
"points": PackedVector2Array(0, 0, 0, 0, 40, 72, 0, 0, 0, 0, 200, 72)
}
point_count = 2

[sub_resource type="RectangleShape2D" id="RectangleShape2D_n4wai"]
size = Vector2(20, 224)

[sub_resource type="Animation" id="Animation_awkpk"]
resource_name = "GhostAppear"
step = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("HermitGhost:position")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(248, 0), Vector2(248, 216)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("HermitGhost:modulate")
tracks/1/interp = 2
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_hql16"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("HermitGhost:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, -16)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("HermitGhost:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_tkuhg"]
_data = {
"GhostAppear": SubResource("Animation_awkpk"),
"RESET": SubResource("Animation_hql16")
}

[sub_resource type="CanvasItemMaterial" id="CanvasItemMaterial_hv3mk"]
light_mode = 2

[node name="EndArea" type="Node2D"]
script = ExtResource("1_3au4c")

[node name="GroundLayer" type="TileMapLayer" parent="."]
tile_map_data = PackedByteArray("AAAAAAAAAAABAAIAAAAAAAMAAAACAAAAAAAAAAQAAAACAAEAAAAAAAUAAAACAAEAAAAAAAYAAAACAAEAAAAAAAcAAAACAAEAAAAAAAgAAAACAAEAAAAAAAkAAAACAAEAAAAAAAoAAAACAAEAAAAAAAsAAAACAAEAAAAAAAwAAAACAAEAAAAAAA0AAAACAAEAAAAAAA4AAAACAAIAAAAAAA8AAAABAAAAAAAAABAAAAABAAIAAAAdABAAAAABAAIAAAAdAA8AAAABAAAAAAAdAA4AAAAAAAIAAAAdAA0AAAAAAAEAAAAdAAwAAAAAAAEAAAAdAAsAAAAAAAEAAAAdAAoAAAAAAAEAAAAdAAkAAAAAAAEAAAAdAAgAAAAAAAEAAAAdAAcAAAAAAAEAAAAdAAYAAAAAAAEAAAAdAAUAAAAAAAEAAAAdAAQAAAAAAAEAAAAdAAMAAAAAAAEAAAAdAAIAAAAAAAEAAAAdAAEAAAAAAAAAAAAdAAAAAAABAAIAAAAcABAAAAABAAIAAAAbABAAAAABAAIAAAAaABAAAAABAAIAAAAZABAAAAABAAIAAAAYABAAAAABAAIAAAAXABAAAAABAAIAAAAWABAAAAABAAIAAAAVABAAAAABAAIAAAAUABAAAAABAAIAAAATABAAAAABAAIAAAASABAAAAABAAIAAAARABAAAAABAAIAAAAQABAAAAABAAIAAAAPABAAAAABAAIAAAAOABAAAAABAAIAAAANABAAAAABAAIAAAAMABAAAAABAAIAAAALABAAAAABAAIAAAAKABAAAAABAAIAAAAJABAAAAABAAIAAAAIABAAAAABAAIAAAAHABAAAAABAAIAAAAGABAAAAABAAIAAAAFABAAAAABAAIAAAAEABAAAAABAAIAAAADABAAAAABAAIAAAACABAAAAABAAIAAAABABAAAAABAAIAAAAcAAAAAAABAAIAAAAbAAAAAAABAAIAAAAaAAAAAAABAAIAAAAZAAAAAAABAAIAAAAYAAAAAAABAAIAAAAXAAAAAAABAAIAAAAWAAAAAAABAAIAAAAVAAAAAAABAAIAAAAUAAAAAAABAAIAAAATAAAAAAABAAIAAAASAAAAAAABAAIAAAARAAAAAAABAAIAAAAQAAAAAAABAAIAAAAPAAAAAAABAAIAAAAOAAAAAAABAAIAAAANAAAAAAABAAIAAAAMAAAAAAABAAIAAAALAAAAAAABAAIAAAAKAAAAAAABAAIAAAAJAAAAAAABAAIAAAAIAAAAAAABAAIAAAAHAAAAAAABAAIAAAAGAAAAAAABAAIAAAAFAAAAAAABAAIAAAAEAAAAAAABAAIAAAADAAAAAAABAAIAAAACAAAAAAABAAIAAAABAAAAAAABAAIAAAAcAA8AAAABAAAAAAAbAA8AAAABAAAAAAAaAA8AAAABAAAAAAAZAA8AAAABAAAAAAAYAA8AAAABAAAAAAAXAA8AAAABAAAAAAAWAA8AAAABAAAAAAAVAA8AAAABAAAAAAAUAA8AAAABAAAAAAATAA8AAAABAAAAAAASAA8AAAABAAAAAAARAA8AAAABAAAAAAAQAA8AAAABAAAAAAAPAA8AAAABAAAAAAAOAA8AAAABAAAAAAANAA8AAAABAAAAAAAMAA8AAAABAAAAAAALAA8AAAABAAAAAAAKAA8AAAABAAAAAAAJAA8AAAABAAAAAAAIAA8AAAABAAAAAAAHAA8AAAABAAAAAAAGAA8AAAABAAAAAAAFAA8AAAABAAAAAAAEAA8AAAABAAAAAAADAA8AAAABAAAAAAACAA8AAAABAAAAAAABAA8AAAABAAAAAAD//xAAAAAAAAIAAAD//w8AAAAAAAAAAAD//w4AAAAAAAIAAAD//w0AAAAAAAEAAAD//wwAAAAAAAEAAAD//wsAAAAAAAEAAAD//woAAAAAAAEAAAD//wkAAAAAAAEAAAD//wgAAAAAAAEAAAD//wcAAAAAAAEAAAD//wYAAAAAAAEAAAD//wUAAAAAAAEAAAD//wQAAAAAAAEAAAD//wMAAAAAAAAAAAD//wIAAAADAAIAAAD//wEAAAADAAAAAAD//wAAAAAAAAIAAAAcAP//AAABAAAAAAAbAP//AAABAAAAAAAaAP//AAABAAAAAAAZAP//AAABAAAAAAAYAP//AAABAAAAAAAXAP//AAABAAAAAAAWAP//AAABAAAAAAAVAP//AAABAAAAAAAUAP//AAABAAAAAAATAP//AAABAAAAAAASAP//AAABAAAAAAARAP//AAABAAAAAAAQAP//AAABAAAAAAAPAP//AAABAAAAAAAOAP//AAABAAAAAAANAP//AAABAAAAAAAMAP//AAABAAAAAAALAP//AAABAAAAAAAKAP//AAABAAAAAAAJAP//AAABAAAAAAAIAP//AAABAAAAAAAHAP//AAABAAAAAAAGAP//AAABAAAAAAAFAP//AAABAAAAAAAEAP//AAABAAAAAAADAP//AAABAAAAAAACAP//AAABAAAAAAABAP//AAABAAAAAAAeABAAAAACAAIAAAAeAA8AAAACAAAAAAAeAA4AAAACAAIAAAAeAA0AAAACAAEAAAAeAAwAAAACAAEAAAAeAAsAAAACAAEAAAAeAAoAAAACAAEAAAAeAAkAAAACAAEAAAAeAAgAAAACAAEAAAAeAAcAAAACAAEAAAAeAAYAAAACAAEAAAAeAAUAAAACAAEAAAAeAAQAAAACAAEAAAAeAAMAAAACAAEAAAAeAAIAAAACAAEAAAAeAAEAAAACAAAAAAAeAAAAAAACAAIAAAAeAP//AAACAAAAAAAdAP//AAABAAAAAAAAAP//AAABAAAAAAD/////AAAAAAAAAAAZAA4AAAADAAMAAAAbAA4AAAADAAMAAAAVAA4AAQAHAAAAAAAWAA4AAQAHAAEAAAAUAA4AAQAHAAIAAAAFAA4AAQAHAAAAAAAGAA4AAQAHAAIAAAABAA4AAQAHAAEAAAA=")
tile_set = ExtResource("1_605ti")

[node name="FadingLayer" type="TileMapLayer" parent="."]
tile_set = ExtResource("1_605ti")

[node name="Clouds" type="Node2D" parent="."]

[node name="MovablePlatform" parent="Clouds" instance=ExtResource("3_3rhgk")]
position = Vector2(280, 184)

[node name="MovablePlatform2" parent="Clouds" instance=ExtResource("3_3rhgk")]
position = Vector2(352, 168)
small = false

[node name="Path2D" type="Path2D" parent="Clouds"]
curve = SubResource("Curve2D_wkf5w")

[node name="MovablePlatform" parent="Clouds/Path2D" instance=ExtResource("3_3rhgk")]
position = Vector2(232, 160)
duration = 2.0

[node name="Path2D2" type="Path2D" parent="Clouds"]
curve = SubResource("Curve2D_txa4d")

[node name="MovablePlatform" parent="Clouds/Path2D2" instance=ExtResource("3_3rhgk")]
position = Vector2(232, 80)
duration = 3.0

[node name="Path2D3" type="Path2D" parent="Clouds"]
curve = SubResource("Curve2D_n2u1i")

[node name="MovablePlatform3" parent="Clouds/Path2D3" instance=ExtResource("3_3rhgk")]
position = Vector2(168, 112)
duration = 3.0

[node name="Path2D4" type="Path2D" parent="Clouds"]
curve = SubResource("Curve2D_57lwx")

[node name="MovablePlatform" parent="Clouds/Path2D4" instance=ExtResource("3_3rhgk")]
position = Vector2(40, 72)
duration = 3.0

[node name="Cameras" type="Node" parent="."]

[node name="EndCamera" type="Camera2D" parent="Cameras"]
zoom = Vector2(14, 14)
position_smoothing_enabled = true

[node name="Camera" type="Camera2D" parent="Cameras"]
position = Vector2(104, 112)
zoom = Vector2(4, 4)
limit_left = 0
limit_top = 0
limit_right = 960
limit_bottom = 270
position_smoothing_enabled = true

[node name="Player" parent="." node_paths=PackedStringArray("lights") instance=ExtResource("3_j2xt5")]
position = Vector2(56, 240)
lights = NodePath("../Lights")
metadata/_edit_group_ = true

[node name="CameraTransform" type="RemoteTransform2D" parent="Player"]

[node name="ParallaxBackground" type="ParallaxBackground" parent="."]
layer = -1

[node name="Grid" type="TextureRect" parent="ParallaxBackground"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -960.0
offset_top = -1080.0
offset_right = 1440.0
offset_bottom = -270.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(4, 4)
texture = ExtResource("3_oajhm")
stretch_mode = 1
metadata/_edit_use_anchors_ = true

[node name="Background" type="ParallaxLayer" parent="ParallaxBackground"]
z_index = -100
motion_scale = Vector2(0.8, 1)

[node name="Background" type="TextureRect" parent="ParallaxBackground/Background"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = 480.0
offset_bottom = 270.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("5_rkvis")
stretch_mode = 1

[node name="HermitGhost" parent="." instance=ExtResource("5_0pdnl")]
position = Vector2(0, -16)

[node name="WhooshPlayer" type="AudioStreamPlayer" parent="HermitGhost"]
stream = ExtResource("6_bjgy4")
script = ExtResource("7_shkq6")

[node name="Ghost Appear Zone" type="Area2D" parent="."]
collision_layer = 32
collision_mask = 2
script = ExtResource("6_bvedl")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Ghost Appear Zone"]
position = Vector2(192, 128)
shape = SubResource("RectangleShape2D_n4wai")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_tkuhg")
}

[node name="CreditsFlag" parent="." instance=ExtResource("10_hwype")]
position = Vector2(424, 240)

[node name="ExitDoor" parent="." instance=ExtResource("13_wp323")]
position = Vector2(6, 48)

[node name="HiddenLayer" type="TileMapLayer" parent="."]
material = SubResource("CanvasItemMaterial_hv3mk")
tile_map_data = PackedByteArray("AAAAAAEAAAACAAAAAAD//wEAAAAAAAAAAAD//wIAAAAAAAEAAAD//wMAAAAAAAEAAAAAAAMAAAACAAEAAAAAAAIAAAACAAEAAAD//wQAAAAAAAEAAAD//wUAAAAAAAEAAAD//wYAAAAAAAEAAAD//wcAAAAAAAEAAAD//wgAAAAAAAEAAAD//wkAAAAAAAEAAAD//woAAAAAAAEAAAD//wsAAAAAAAEAAAD//wwAAAAAAAEAAAD//w0AAAAAAAEAAAAAAA4AAAACAAIAAAD//w4AAAAAAAIAAAAAAA0AAAACAAEAAAAAAAwAAAACAAEAAAAAAAsAAAACAAEAAAAAAAUAAAACAAEAAAAAAAQAAAACAAEAAAAAAAYAAAACAAEAAAAAAAcAAAACAAEAAAAAAAgAAAACAAEAAAAAAAkAAAACAAEAAAAAAAoAAAACAAEAAAA=")
tile_set = ExtResource("3_fpu8u")

[node name="Lights" type="Node" parent="."]

[node name="PointLight2D" type="PointLight2D" parent="Lights"]
position = Vector2(0, 56)
texture = ExtResource("13_hhf3b")
texture_scale = 1.1

[node name="Credits" parent="." instance=ExtResource("14_1iyhe")]
visible = false
